[package]
name = "visgression"
version = "0.1.0"
authors = ["mulark <mulark11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charts = "0.3.0"
megabase_index_incrementer = {version = "*", git="https://github.com/technicalfactorio/technicalfactorio.git", default-features=false}
rusqlite = "*"
ureq = "*"
serde_json = "*"
